--- a/drupalvm/config.yml
+++ b/drupalvm/config.yml
@@ -2,7 +2,7 @@ alias_local: '@newupstream.local'
 alias_remote: '@newupstream.dev'
 
 branch: master
-site: 8be50dbc-4463-43b5-bd18-d8304662382
+site: 8be50dbc-4463-43b5-bd18-d83046623820
 env: dev
 
 vagrant_hostname: newupstream.local
