--- a/config/core.entity_view_display.paragraph.accordion_group.default.yml
+++ b/config/core.entity_view_display.paragraph.accordion_group.default.yml
@@ -6,11 +6,13 @@ dependencies:
     - field.field.paragraph.accordion_group.field_accordion_item
     - field.field.paragraph.accordion_group.field_admin_description
     - field.field.paragraph.accordion_group.field_layout
+    - field.field.paragraph.accordion_group.field_oc_long_text
     - field.field.paragraph.accordion_group.field_widget_title
     - paragraphs.paragraphs_type.accordion_group
   module:
     - entity_reference_revisions
     - options
+    - text
 _core:
   default_config_hash: EpiAZwmNAgzRs8bsuDtcjOUrBEkuT9O9Zj8KAU33BNI
 id: paragraph.accordion_group.default
@@ -20,7 +22,7 @@ mode: default
 content:
   field_accordion_item:
     type: entity_reference_revisions_entity_view
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       view_mode: default
@@ -33,6 +35,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_key
+    region: content
+  field_oc_long_text:
+    weight: 2
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_widget_title:
     weight: 0
