--- a/.lando.yml
+++ b/.lando.yml
@@ -17,8 +17,6 @@ services:
         volumes:
           - $LANDO_APP_ROOT_BIND/lando/sync.sh:/helpers/sync.sh
           - $LANDO_APP_ROOT_BIND/lando/deploy.sh:/helpers/deploy.sh
-          - $LANDO_APP_ROOT_BIND/lando/sync.sh:/helpers/sync.sh
-          - $LANDO_APP_ROOT_BIND/lando/deploy.sh:/helpers/deploy.sh
           - ~/.ssh/known_hosts:/etc/ssh/known_hosts
 tooling:
   sync:
@@ -47,8 +45,11 @@ tooling:
         interactive:
           type: 'input'
           message: 'What did you change?'
-          default: 'My awesome Lando-based changes'
+          default: 'Commit message for my awesome changes...'
           weight: 1
+  pull: disabled
+  push: disabled
+
 
 
 # Add in some custom event scripting
