--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
     {
       "type": "package",
       "package": {
-        "name": "electriccitizen/ec-docksal",
-        "version": "1.0.2",
+        "name": "electriccitizen/docksal",
+        "version": "1.1.0",
         "type": "drupal-custom-module",
         "source": {
-          "url": "https://github.com/electriccitizen/ec-docksal.git",
+          "url": "https://github.com/electriccitizen/docksal.git",
           "type": "git",
-          "reference": "1.0.2"
+          "reference": "1.1.0"
         }
       }
     }
@@ -100,7 +100,7 @@
     "webflo/drupal-finder": "^0.3.0",
     "wikimedia/composer-merge-plugin": "~1.3",
     "woothemes/flexslider": "2.6.4",
-    "electriccitizen/ec-docksal": "~1"
+    "electriccitizen/docksal": "~1"
   },
   "require-dev": {
     "mikey179/vfsstream": "^1.2",
