--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Ignore Docksal
 .docksal
 
+# Ignore superfish
+web/libraries/superfish/composer.json
+
 # Ignore scaffold files
 web/.csslintrc
 web/.editorconfig
@@ -64,6 +67,7 @@ web/sites/default/files
 
 # Ignore node_modules
 web/themes/*/node_modules/
+
 
 # Pantheon commits a settings.php for environment-specific settings.
 # Place local settings in settings.local.php
