--- a/composer.json
+++ b/composer.json
@@ -26,12 +26,12 @@
       "type": "package",
       "package": {
         "name": "electriccitizen/docksal",
-        "version": "1.2.5",
+        "version": "1.2.7",
         "type": "drupal-custom-module",
         "source": {
           "url": "https://github.com/electriccitizen/docksal.git",
           "type": "git",
-          "reference": "1.2.5"
+          "reference": "1.2.7"
         }
       }
     }
@@ -137,12 +137,10 @@
     "prepare-for-pantheon": "DrupalProject\\composer\\ScriptHandler::prepareForPantheon",
     "post-install-cmd": [
       "@drupal-scaffold",
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
-      "./.docksal/setenv.sh dev @newupstream.dev"
+      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
     ],
     "post-update-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
-      "./.docksal/setenv.sh dev @newupstream.dev"
+      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
     ],
     "post-create-project-cmd": [
       "@drupal-scaffold",
