Cleanup landing page & supprto book display

--- a/config/sync/core.entity_view_display.node.support_book.default.yml
+++ b/config/sync/core.entity_view_display.node.support_book.default.yml
@@ -43,11 +43,10 @@ third_party_settings:
             provider: ctools_block
             label_display: '0'
             formatter:
-              label: above
+              label: hidden
               type: entity_reference_revisions_entity_view
               settings:
                 view_mode: default
-                link: ''
               third_party_settings: {  }
               weight: 0
             region: main
