--- a/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
@@ -1,35 +1,35 @@
-uuid: b6cb74f3-0122-486a-9cf9-dfd0fc703096
+uuid: 7d6cefe2-fa95-4ab5-b07b-3c6287c48432
 langcode: en
 status: true
 dependencies:
   config:
     - core.entity_form_mode.media.background_image
-    - field.field.paragraph.landing_page_section.field_admin_description
-    - field.field.paragraph.landing_page_section.field_anchor_link
-    - field.field.paragraph.landing_page_section.field_background_image
-    - field.field.paragraph.landing_page_section.field_background_style
-    - field.field.paragraph.landing_page_section.field_layout
-    - field.field.paragraph.landing_page_section.field_section_intro
-    - field.field.paragraph.landing_page_section.field_section_title
-    - field.field.paragraph.landing_page_section.field_section_widgets
-    - paragraphs.paragraphs_type.landing_page_section
+    - field.field.paragraph.basic_page_section.field_admin_description
+    - field.field.paragraph.basic_page_section.field_anchor_link
+    - field.field.paragraph.basic_page_section.field_background_image
+    - field.field.paragraph.basic_page_section.field_background_style
+    - field.field.paragraph.basic_page_section.field_layout
+    - field.field.paragraph.basic_page_section.field_section_intro
+    - field.field.paragraph.basic_page_section.field_section_title
+    - field.field.paragraph.basic_page_section.field_section_widgets
+    - paragraphs.paragraphs_type.basic_page_section
   module:
     - entity_browser_entity_form
     - inline_entity_form
     - paragraphs
-id: paragraph.landing_page_section.default
+id: paragraph.basic_page_section.default
 targetEntityType: paragraph
-bundle: landing_page_section
+bundle: basic_page_section
 mode: default
 content:
   field_admin_description:
+    type: string_textfield
     weight: 1
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_anchor_link:
     weight: 2
     settings:
@@ -82,18 +82,18 @@ content:
     type: string_textfield
     region: content
   field_section_widgets:
-    type: paragraphs
     weight: 7
     settings:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: closed
       closed_mode: preview
-      autocollapse: none
+      autocollapse: all
       add_mode: button
       form_display_mode: default
       default_paragraph_type: _none
     third_party_settings: {  }
+    type: paragraphs
     region: content
 hidden:
   created: true
