--- a/config/sync/field.field.node.page.field_oc_widgets.yml
+++ b/config/sync/field.field.node.page.field_oc_widgets.yml
@@ -5,23 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_oc_widgets
     - node.type.page
-    - paragraphs.paragraphs_type.accordion_group
-    - paragraphs.paragraphs_type.admin_view_placer
-    - paragraphs.paragraphs_type.block_placer
-    - paragraphs.paragraphs_type.buttons
-    - paragraphs.paragraphs_type.call_to_action
-    - paragraphs.paragraphs_type.custom_code
-    - paragraphs.paragraphs_type.form
-    - paragraphs.paragraphs_type.horizontal_rule
-    - paragraphs.paragraphs_type.image
-    - paragraphs.paragraphs_type.lightbox_gallery
-    - paragraphs.paragraphs_type.links_files
-    - paragraphs.paragraphs_type.map
-    - paragraphs.paragraphs_type.pullquote
-    - paragraphs.paragraphs_type.slideshow
-    - paragraphs.paragraphs_type.social_media
-    - paragraphs.paragraphs_type.text
-    - paragraphs.paragraphs_type.video
+    - paragraphs.paragraphs_type.basic_page_section
   module:
     - entity_reference_revisions
 _core:
@@ -39,98 +23,77 @@ default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
+    negate: 0
     target_bundles:
-      accordion_group: accordion_group
-      admin_view_placer: admin_view_placer
-      block_placer: block_placer
-      buttons: buttons
-      call_to_action: call_to_action
-      custom_code: custom_code
-      form: form
-      horizontal_rule: horizontal_rule
-      image: image
-      lightbox_gallery: lightbox_gallery
-      links_files: links_files
-      map: map
-      slideshow: slideshow
-      text: text
-      video: video
-      pullquote: pullquote
-      social_media: social_media
+      basic_page_section: basic_page_section
     target_bundles_drag_drop:
       accordion_group:
-        enabled: true
-        weight: -51
+        weight: -47
+        enabled: false
       accordion_item:
-        weight: -50
+        weight: -47
         enabled: false
       admin_view_placer:
-        enabled: true
-        weight: -49
-      block_placer:
-        enabled: true
-        weight: -48
-      buttons:
-        enabled: true
         weight: -47
+        enabled: false
+      block_placer:
+        weight: -47
+        enabled: false
+      buttons:
+        weight: -47
+        enabled: false
       call_to_action:
-        enabled: true
         weight: -46
+        enabled: false
       custom_code:
-        enabled: true
         weight: -45
+        enabled: false
       form:
-        enabled: true
         weight: -44
+        enabled: false
       horizontal_rule:
-        enabled: true
         weight: -43
+        enabled: false
       image:
-        enabled: true
         weight: -42
+        enabled: false
       lightbox_gallery:
-        enabled: true
         weight: -41
+        enabled: false
       links_files:
-        enabled: true
         weight: -40
+        enabled: false
       map:
-        enabled: true
         weight: -39
+        enabled: false
       slideshow:
-        enabled: true
         weight: -38
+        enabled: false
       text:
-        enabled: true
         weight: -37
+        enabled: false
       video:
-        enabled: true
         weight: -36
+        enabled: false
       pullquote:
-        enabled: true
         weight: -35
+        enabled: false
       social_media:
-        enabled: true
         weight: -34
+        enabled: false
       social_platform:
         weight: -33
         enabled: false
       event_by_category:
         weight: -32
         enabled: false
-      mosaic_gallery:
-        weight: -31
-        enabled: false
       news_by_category:
         weight: -30
         enabled: false
-      reveal_group:
-        weight: -29
-        enabled: false
-      reveal_section:
-        weight: -28
-        enabled: false
-      tile_image:
-        weight: -27
+      basic_page_section:
+        enabled: true
+        weight: 24
+      landing_page_section:
+        weight: 36
         enabled: false
 field_type: entity_reference_revisions
