--- a/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_widgets.yml
@@ -1,91 +1,117 @@
-uuid: b6473867-12e0-4c8f-88c4-6d1d96079c95
+uuid: 99f94f10-52c6-49b0-b772-c72438b8ec69
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_oc_widgets
-    - node.type.blog
+    - field.storage.paragraph.field_section_widgets
     - paragraphs.paragraphs_type.accordion_group
-    - paragraphs.paragraphs_type.buttons
-    - paragraphs.paragraphs_type.call_to_action
+    - paragraphs.paragraphs_type.basic_page_section
+    - paragraphs.paragraphs_type.form
     - paragraphs.paragraphs_type.horizontal_rule
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.lightbox_gallery
     - paragraphs.paragraphs_type.links_files
     - paragraphs.paragraphs_type.map
+    - paragraphs.paragraphs_type.pullquote
     - paragraphs.paragraphs_type.slideshow
     - paragraphs.paragraphs_type.text
     - paragraphs.paragraphs_type.video
   module:
     - entity_reference_revisions
-_core:
-  default_config_hash: GoTXjjv2DoJbTFaIhEW1kG6EKZClw4DaF6XwMTljQ4U
-id: node.blog.field_oc_widgets
-field_name: field_oc_widgets
-entity_type: node
-bundle: blog
-label: Widgets
-description: 'Add widgets to this node. Use the layout option on each widget to set it''s width and use the draggable handles to set the order to create custom layout grids. <strong>NOTE:</strong> When using Manage Content through IPE, you will not be able to re-order widgets, just this entire field itself.'
-required: false
+id: paragraph.basic_page_section.field_section_widgets
+field_name: field_section_widgets
+entity_type: paragraph
+bundle: basic_page_section
+label: 'Section Widgets'
+description: ''
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:paragraph'
   handler_settings:
+    negate: 0
     target_bundles:
       accordion_group: accordion_group
-      buttons: buttons
-      call_to_action: call_to_action
+      form: form
       horizontal_rule: horizontal_rule
       image: image
       lightbox_gallery: lightbox_gallery
       links_files: links_files
       map: map
+      pullquote: pullquote
       slideshow: slideshow
       text: text
       video: video
     target_bundles_drag_drop:
+      basic_page_section:
+        weight: 24
+        enabled: false
       accordion_group:
         enabled: true
-        weight: 15
+        weight: 25
       accordion_item:
-        weight: 16
+        weight: 26
         enabled: false
       admin_view_placer:
-        weight: 17
+        weight: 27
+        enabled: false
+      block_placer:
+        weight: 28
         enabled: false
       buttons:
-        enabled: true
-        weight: 18
-      call_to_action:
-        enabled: true
-        weight: 19
-      form:
-        weight: 20
+        weight: 29
         enabled: false
+      call_to_action:
+        weight: 30
+        enabled: false
+      custom_code:
+        weight: 31
+        enabled: false
+      event_by_category:
+        weight: 32
+        enabled: false
+      form:
+        enabled: true
+        weight: 33
       horizontal_rule:
         enabled: true
-        weight: 21
+        weight: 34
       image:
         enabled: true
-        weight: 22
+        weight: 35
+      landing_page_section:
+        weight: 36
+        enabled: false
       lightbox_gallery:
         enabled: true
-        weight: 23
+        weight: 37
       links_files:
         enabled: true
-        weight: 24
+        weight: 38
       map:
         enabled: true
-        weight: 25
+        weight: 39
+      news_by_category:
+        weight: 40
+        enabled: false
+      pullquote:
+        enabled: true
+        weight: 41
       slideshow:
         enabled: true
-        weight: 26
+        weight: 42
+      social_media:
+        weight: 43
+        enabled: false
+      social_platform:
+        weight: 44
+        enabled: false
       text:
         enabled: true
-        weight: 27
+        weight: 45
       video:
         enabled: true
-        weight: 28
+        weight: 46
 field_type: entity_reference_revisions
