--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -23,6 +23,7 @@ permissions:
   - 'view paragraph content accordion_group'
   - 'view paragraph content accordion_item'
   - 'view paragraph content admin_view_placer'
+  - 'view paragraph content basic_page_section'
   - 'view paragraph content block_placer'
   - 'view paragraph content buttons'
   - 'view paragraph content call_to_action'
