--- a/config/sync/user.role.senior_editor.yml
+++ b/config/sync/user.role.senior_editor.yml
@@ -59,6 +59,8 @@ permissions:
   - 'create page content'
   - 'create paragraph content accordion_group'
   - 'create paragraph content accordion_item'
+  - 'create paragraph content basic_page_section'
+  - 'create paragraph content block_placer'
   - 'create paragraph content buttons'
   - 'create paragraph content call_to_action'
   - 'create paragraph content event_by_category'
@@ -109,6 +111,8 @@ permissions:
   - 'delete page revisions'
   - 'delete paragraph content accordion_group'
   - 'delete paragraph content accordion_item'
+  - 'delete paragraph content basic_page_section'
+  - 'delete paragraph content block_placer'
   - 'delete paragraph content buttons'
   - 'delete paragraph content call_to_action'
   - 'delete paragraph content event_by_category'
@@ -168,6 +172,8 @@ permissions:
   - 'update media'
   - 'update paragraph content accordion_group'
   - 'update paragraph content accordion_item'
+  - 'update paragraph content basic_page_section'
+  - 'update paragraph content block_placer'
   - 'update paragraph content buttons'
   - 'update paragraph content call_to_action'
   - 'update paragraph content event_by_category'
