Add section intro

--- a/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.landing_page_section.default.yml
@@ -17,13 +17,14 @@ dependencies:
     - entity_browser_entity_form
     - inline_entity_form
     - paragraphs
+    - text
 id: paragraph.landing_page_section.default
 targetEntityType: paragraph
 bundle: landing_page_section
 mode: default
 content:
   field_admin_description:
-    weight: 1
+    weight: 2
     settings:
       size: 60
       placeholder: ''
@@ -31,7 +32,7 @@ content:
     type: string_textfield
     region: content
   field_anchor_link:
-    weight: 2
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -66,12 +67,12 @@ content:
     type: options_select
     region: content
   field_section_intro:
-    weight: 3
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textarea
+    type: text_textarea
     region: content
   field_section_title:
     weight: 0
