--- a/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.basic_page_section.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - entity_browser_entity_form
     - inline_entity_form
     - paragraphs
+    - text
 id: paragraph.basic_page_section.default
 targetEntityType: paragraph
 bundle: basic_page_section
@@ -24,14 +25,14 @@ mode: default
 content:
   field_admin_description:
     type: string_textfield
-    weight: 1
+    weight: 2
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   field_anchor_link:
-    weight: 2
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -66,12 +67,12 @@ content:
     type: options_select
     region: content
   field_section_intro:
-    weight: 3
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: string_textarea
+    type: text_textarea
     region: content
   field_section_title:
     weight: 0
