--- a/config/sync/field.field.paragraph.basic_page_section.field_section_intro.yml
+++ b/config/sync/field.field.paragraph.basic_page_section.field_section_intro.yml
@@ -1,10 +1,12 @@
-uuid: ec669d9f-5c19-4097-bde7-2754c0e6bbe1
+uuid: c2aaae73-50d2-48d2-b2a0-d29df1254b97
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_section_intro
     - paragraphs.paragraphs_type.basic_page_section
+  module:
+    - text
 id: paragraph.basic_page_section.field_section_intro
 field_name: field_section_intro
 entity_type: paragraph
@@ -16,4 +18,4 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string_long
+field_type: text_long
