--- a/config/sync/field.field.paragraph.landing_page_section.field_section_intro.yml
+++ b/config/sync/field.field.paragraph.landing_page_section.field_section_intro.yml
@@ -1,10 +1,12 @@
-uuid: 3f1a336a-2a54-4904-8ab4-a1ef788d19ed
+uuid: 555a9297-0a7d-4557-9845-40858d409225
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_section_intro
     - paragraphs.paragraphs_type.landing_page_section
+  module:
+    - text
 id: paragraph.landing_page_section.field_section_intro
 field_name: field_section_intro
 entity_type: paragraph
@@ -16,4 +18,4 @@ translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
-field_type: string_long
+field_type: text_long
