--- a/config/sync/field.storage.paragraph.field_section_intro.yml
+++ b/config/sync/field.storage.paragraph.field_section_intro.yml
@@ -1,16 +1,16 @@
-uuid: b0f2fdea-71b6-4f28-aa6b-f74edbe628a9
+uuid: 71d7c57f-4b45-41cc-84b8-849f3d39ea70
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
+    - text
 id: paragraph.field_section_intro
 field_name: field_section_intro
 entity_type: paragraph
-type: string_long
-settings:
-  case_sensitive: false
-module: core
+type: text_long
+settings: {  }
+module: text
 locked: false
 cardinality: 1
 translatable: true
