Update custom admin css, media view

--- a/config/sync/core.entity_form_display.media.image.background_image.yml
+++ b/config/sync/core.entity_form_display.media.image.background_image.yml
@@ -10,7 +10,6 @@ dependencies:
     - media_entity.bundle.image
   module:
     - focal_point
-    - path
 _core:
   default_config_hash: RoFWXq9TE3JLpNwhIhChH60ZmaSkjxQfZmLs6sfLY-o
 id: media.image.background_image
@@ -36,13 +35,8 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   created: true
   field_caption: true
+  path: true
   uid: true
