--- a/config/sync/views.view.media.yml
+++ b/config/sync/views.view.media.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - image.style.thumbnail
   module:
-    - entity_browser
     - image
     - media_entity
     - user
@@ -44,7 +43,7 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Filter
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
