--- a/config/sync/core.entity_view_display.paragraph.call_to_action.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.call_to_action.preview.yml
@@ -16,15 +16,15 @@ targetEntityType: paragraph
 bundle: call_to_action
 mode: preview
 content:
-  field_widget_title:
+  field_admin_description:
+    type: string
     weight: 0
+    region: content
     label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
-    region: content
 hidden:
-  field_admin_description: true
   field_oc_link: true
   field_oc_long_text: true
+  field_widget_title: true
