Align date formats

--- a/config/sync/views.view.blog.yml
+++ b/config/sync/views.view.blog.yml
@@ -656,7 +656,7 @@ display:
           click_sort_column: value
           type: timestamp
           settings:
-            date_format: oc_text_date_only
+            date_format: oc_short_date_only
             custom_date_format: ''
             timezone: ''
           group_column: value
