--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -32,7 +32,7 @@ third_party_settings:
               label: hidden
               type: timestamp
               settings:
-                date_format: oc_text_date_only
+                date_format: oc_short_date_only
                 custom_date_format: ''
                 timezone: ''
               third_party_settings: {  }
