Remove simple blocks, add restricted block type

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/colors.yml
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/01-colors/colors.yml
@@ -50,7 +50,7 @@ items:
   - name: $unpubDark
     value: '#fdd5dd'
   - name: $siteBack
-    value: '#f6f6f6'
+    value: '#ffffff'
   - name: $borderRule
     value: '#222222'
   - name: $link
