Remove simple blocks, add restricted blocks

--- a/config/sync/core.entity_view_display.paragraph.horizontal_rule.preview.yml
+++ b/config/sync/core.entity_view_display.paragraph.horizontal_rule.preview.yml
@@ -12,4 +12,5 @@ targetEntityType: paragraph
 bundle: horizontal_rule
 mode: preview
 content: {  }
-hidden: {  }
+hidden:
+  field_hr_default: true
