Remove contact, update pathologic

--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -61,7 +61,7 @@ settings:
             - Styles
   plugins:
     stylescombo:
-      styles: span.highlight|highlight
+      styles: "span.highlight|Highlight\r\ndiv.warning|Warning\r\nsmall|Small"
     language:
       language_list: un
     linkit:
