--- a/config/sync/pathologic.settings.yml
+++ b/config/sync/pathologic.settings.yml
@@ -4,6 +4,6 @@ scheme_whitelist:
   - files
   - internal
 protocol_style: full
-local_paths: "http://oc8-base.dd:8083/\r\nhttp://dev-oc8-base.pantheonsite.io/"
+local_paths: "http://newupstream.docksal/\r\nhttp://dev-newupstream.pantheonsite.io/"
 _core:
   default_config_hash: AIOyhrFNbAt8fgqcQo7SXC1uH2FYwvishxDGRoWfq7I
