Remove custom views classes

--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -378,7 +378,7 @@ display:
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
-          element_wrapper_class: card-image
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
@@ -441,7 +441,7 @@ display:
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
-          element_wrapper_class: card-text
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
