--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -377,7 +377,7 @@ display:
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
-          element_wrapper_class: card-image
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
@@ -440,7 +440,7 @@ display:
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
-          element_wrapper_class: card-text
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
