--- a/config/sync/views.view.profiles.yml
+++ b/config/sync/views.view.profiles.yml
@@ -76,7 +76,7 @@ display:
         type: default
         options:
           grouping: {  }
-          row_class: round
+          row_class: ''
           default_row_class: true
       row:
         type: fields
@@ -245,7 +245,7 @@ display:
           element_label_class: ''
           element_label_colon: false
           element_wrapper_type: ''
-          element_wrapper_class: card-image
+          element_wrapper_class: ''
           element_default_classes: true
           empty: ''
           hide_empty: false
