Cleanup image styles, disable flexslider views style

--- a/config/sync/core.entity_view_display.media.image.full.yml
+++ b/config/sync/core.entity_view_display.media.image.full.yml
@@ -6,10 +6,10 @@ dependencies:
     - core.entity_view_mode.media.full
     - field.field.media.image.field_caption
     - field.field.media.image.field_media_image
-    - image.style.max_2600x2600
     - media_entity.bundle.image
+    - responsive_image.styles.full_1200
   module:
-    - image
+    - responsive_image
 _core:
   default_config_hash: QNTUI1YiZ8ZojaMkIVsTblnpJDXq_mzx8bNBFIrR9ls
 id: media.image.full
@@ -26,15 +26,16 @@ content:
     third_party_settings: {  }
     region: content
   field_media_image:
+    type: responsive_image
     weight: 0
+    region: content
     label: hidden
     settings:
-      image_style: max_2600x2600
+      responsive_image_style: full_1200
       image_link: ''
     third_party_settings: {  }
-    type: image
-    region: content
 hidden:
+  addtoany: true
   created: true
   name: true
   thumbnail: true
