--- a/config/sync/core.entity_view_display.media.image.square.yml
+++ b/config/sync/core.entity_view_display.media.image.square.yml
@@ -35,6 +35,7 @@ content:
       image_link: ''
     third_party_settings: {  }
 hidden:
+  addtoany: true
   created: true
   name: true
   thumbnail: true
