--- a/config/sync/core.entity_view_display.media.image.large.yml
+++ b/config/sync/core.entity_view_display.media.image.large.yml
@@ -6,10 +6,10 @@ dependencies:
     - core.entity_view_mode.media.large
     - field.field.media.image.field_caption
     - field.field.media.image.field_media_image
-    - image.style.large_800
     - media_entity.bundle.image
+    - responsive_image.styles.large_800
   module:
-    - image
+    - responsive_image
 _core:
   default_config_hash: Tvt5IJw5Erk1uxEBccS1MkGjLFQz7GIgVTZbLY-bD_Q
 id: media.image.large
@@ -29,12 +29,13 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: large_800
+      responsive_image_style: large_800
       image_link: ''
     third_party_settings: {  }
-    type: image
+    type: responsive_image
     region: content
 hidden:
+  addtoany: true
   created: true
   name: true
   thumbnail: true
