--- a/config/sync/core.entity_view_display.node.landing_page.default.yml
+++ b/config/sync/core.entity_view_display.node.landing_page.default.yml
@@ -86,7 +86,7 @@ third_party_settings:
               label: hidden
               type: entity_reference_entity_view
               settings:
-                view_mode: banner_tall
+                view_mode: banner
               third_party_settings: {  }
               weight: 0
             region: top
