--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -67,7 +67,7 @@ third_party_settings:
               label: hidden
               type: entity_reference_entity_view
               settings:
-                view_mode: banner_narrow
+                view_mode: square
               third_party_settings: {  }
               weight: 0
             region: top
