--- a/config/sync/views.view.blog.yml
+++ b/config/sync/views.view.blog.yml
@@ -838,7 +838,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: large_rectangle
+            view_mode: large_thumb
           group_column: target_id
           group_columns: {  }
           group_rows: true
