Add ISQ to all 2x images, set correct links with pathologic in CKE, switch tags & blog title

--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -5,6 +5,7 @@ dependencies:
   module:
     - editor
     - entity_embed
+    - pathologic
 _core:
   default_config_hash: t7NqYO0ZgtimcRvICrO63omDoP5N8kmMLddTu3Wm_Ac
 name: 'Basic HTML'
@@ -75,3 +76,13 @@ filters:
     weight: -47
     settings:
       filter_url_length: 72
+  filter_pathologic:
+    id: filter_pathologic
+    provider: pathologic
+    status: true
+    weight: 50
+    settings:
+      settings_source: global
+      local_settings:
+        protocol_style: full
+        local_paths: ''
