--- a/config/sync/image.style.oc_thumbnail_large_2x.yml
+++ b/config/sync/image.style.oc_thumbnail_large_2x.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - focal_point
+    - image_style_quality
 _core:
   default_config_hash: 5MiYeHzLSpUswY_qN2xLn-xMaff4dtm-RtWvbpNV-2c
 name: oc_thumbnail_large_2x
@@ -16,3 +17,10 @@ effects:
     data:
       width: 500
       height: 400
+      crop_type: focal_point
+  bed7ad41-a0ba-4fbe-be0a-a78ee39adcb2:
+    uuid: bed7ad41-a0ba-4fbe-be0a-a78ee39adcb2
+    id: image_style_quality
+    weight: 2
+    data:
+      quality: 40
