--- a/config/sync/core.entity_view_display.node.blog.default.yml
+++ b/config/sync/core.entity_view_display.node.blog.default.yml
@@ -58,7 +58,7 @@ third_party_settings:
               label: inline
               type: entity_reference_label
               settings:
-                link: true
+                link: false
               third_party_settings: {  }
               weight: 0
             region: main
