--- a/config/sync/image.style.banner_mobile_2x.yml
+++ b/config/sync/image.style.banner_mobile_2x.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - focal_point
+    - image_style_quality
 _core:
   default_config_hash: KNNoyfiiJo06M2n_1FBWjXqdJEvWpmsvruZvh9m_Wtk
 name: banner_mobile_2x
@@ -16,3 +17,10 @@ effects:
     data:
       width: 800
       height: 600
+      crop_type: focal_point
+  c2e63f41-dc38-400e-88aa-91680b247019:
+    uuid: c2e63f41-dc38-400e-88aa-91680b247019
+    id: image_style_quality
+    weight: 2
+    data:
+      quality: 35
