--- a/config/sync/image.style.banner_tablet_2x.yml
+++ b/config/sync/image.style.banner_tablet_2x.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - focal_point
+    - image_style_quality
 _core:
   default_config_hash: rg1Uge61AWrcbclT84Vqu3Q_AAd2f7w510l3JWjzeTo
 name: banner_tablet_2x
@@ -16,3 +17,10 @@ effects:
     data:
       width: 1600
       height: 900
+      crop_type: focal_point
+  2c05bd5c-220b-4a31-a9d6-44d04e546b2b:
+    uuid: 2c05bd5c-220b-4a31-a9d6-44d04e546b2b
+    id: image_style_quality
+    weight: 2
+    data:
+      quality: 30
