--- a/config/sync/image.style.small_300_2x.yml
+++ b/config/sync/image.style.small_300_2x.yml
@@ -1,7 +1,9 @@
 uuid: a78e153e-51ed-44b8-9ed0-0e2049f2490e
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - image_style_quality
 _core:
   default_config_hash: WE8jU1NKe9AlxLVBsXWuB2KTnZ9A91mdj0hd4XLHs9E
 name: small_300_2x
@@ -15,3 +17,9 @@ effects:
       width: 600
       height: null
       upscale: true
+  ec68e819-7870-4e5f-929f-407ac804db5d:
+    uuid: ec68e819-7870-4e5f-929f-407ac804db5d
+    id: image_style_quality
+    weight: 2
+    data:
+      quality: 40
