--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -78,7 +78,7 @@ content:
         fullscreenControl: 1
         gestureHandling: auto
         draggable: 1
-        style: '[{"featureType":"administrative","elementType":"geometry","stylers":[{"saturation":"1"}]},{"featureType":"administrative.country","elementType":"all","stylers":[{"visibility":"on"}]},{"featureType":"administrative.country","elementType":"labels","stylers":[{"saturation":"-100"}]},{"featureType":"administrative.province","elementType":"all","stylers":[{"visibility":"on"}]},{"featureType":"administrative.province","elementType":"labels","stylers":[{"lightness":"1"},{"saturation":"-100"}]},{"featureType":"administrative.locality","elementType":"geometry","stylers":[{"saturation":"-100"},{"visibility":"off"},{"hue":"#ff0000"}]},{"featureType":"administrative.locality","elementType":"geometry.fill","stylers":[{"saturation":"4"}]},{"featureType":"administrative.locality","elementType":"labels","stylers":[{"saturation":"-100"}]},{"featureType":"administrative.neighborhood","elementType":"geometry","stylers":[{"saturation":"-100"}]},{"featureType":"administrative.neighborhood","elementType":"labels","stylers":[{"saturation":"-100"}]},{"featureType":"administrative.land_parcel","elementType":"geometry","stylers":[{"saturation":"-100"}]},{"featureType":"administrative.land_parcel","elementType":"labels","stylers":[{"saturation":"-100"}]},{"featureType":"landscape","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"landscape","elementType":"geometry","stylers":[{"visibility":"off"},{"saturation":"-100"}]},{"featureType":"landscape","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#ffffff"}]},{"featureType":"landscape","elementType":"geometry.stroke","stylers":[{"visibility":"on"}]},{"featureType":"landscape.man_made","elementType":"all","stylers":[{"saturation":"4"}]},{"featureType":"landscape.man_made","elementType":"geometry","stylers":[{"saturation":"-100"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.attraction","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"lightness":"16"},{"saturation":"-7"}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"saturation":"0"}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"saturation":"-100"}]},{"featureType":"water","elementType":"all","stylers":[{"visibility":"on"},{"color":"#002855"}]},{"featureType":"water","elementType":"geometry","stylers":[{"weight":"1.12"}]},{"featureType":"water","elementType":"geometry.fill","stylers":[{"lightness":"0"}]},{"featureType":"water","elementType":"geometry.stroke","stylers":[{"weight":"0.50"},{"lightness":"0"}]},{"featureType":"water","elementType":"labels","stylers":[{"weight":"0.50"},{"color":"#ffffff"}]}]'
+        style: '[{"featureType":"all","elementType":"labels.text.fill","stylers":[{"color":"#736c68"}]},{"featureType":"landscape.man_made","elementType":"geometry.fill","stylers":[{"color":"#e7e6e5"}]},{"featureType":"landscape.natural","elementType":"all","stylers":[{"visibility":"on"},{"color":"#d4e4d3"}]},{"featureType":"poi","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#f5f5f5"}]},{"featureType":"poi.park","elementType":"geometry.fill","stylers":[{"color":"#d4e4d3"}]},{"featureType":"road","elementType":"geometry.fill","stylers":[{"color":"#f5f5f5"}]},{"featureType":"road","elementType":"geometry.stroke","stylers":[{"color":"#e7e6e5"},{"gamma":"0.65"},{"lightness":"0"}]},{"featureType":"transit","elementType":"labels.text","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#aad5df"}]}]'
         info_auto_display: 1
         marker_icon_path: ''
         disableAutoPan: 1
@@ -148,6 +148,11 @@ content:
       placeholder: ''
     third_party_settings: {  }
     region: content
+  url_redirects:
+    weight: 50
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
   panelizer: true
