--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
     "drupal/entity_embed": "^1.0@beta",
     "drupal/environment_indicator": "~3",
     "drupal/field_group": "^1.0@RC",
+    "drupal/flexslider": "^2.0@beta",
     "drupal/flippy": "1.x-dev",
     "drupal/focal_point": "~1",
     "drupal/geolocation": "^1.11",
@@ -92,12 +93,12 @@
     "drupal/webform": "~5",
     "drupal/xmlsitemap": "^1.0@alpha",
     "drush/drush": "~8",
+    "electriccitizen/docksal": "~1",
     "geerlingguy/drupal-vm": "^4.7",
     "rvtraveller/qs-composer-installer": "^1.1",
     "webflo/drupal-core-strict": "^8",
     "webflo/drupal-finder": "^0.3.0",
-    "wikimedia/composer-merge-plugin": "~1.3",
-    "electriccitizen/docksal": "~1"
+    "wikimedia/composer-merge-plugin": "~1.3"
   },
   "require-dev": {
     "mikey179/vfsstream": "^1.2",
