--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
     "drupal/entity_browser": "^1.1",
     "drupal/entity_embed": "^1.0@beta",
     "drupal/environment_indicator": "~3",
+    "drupal/eu_cookie_compliance": "^1.0",
     "drupal/field_group": "^1.0@RC",
     "drupal/flexslider": "^2.0@beta",
     "drupal/flippy": "1.x-dev",
