--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -33,6 +33,7 @@ module:
   entity_embed: 0
   entity_reference_revisions: 0
   environment_indicator: 0
+  eu_cookie_compliance: 0
   field: 0
   field_group: 0
   field_ui: 0
